--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,16 @@
     <script type="module" src="js/main.js"></script>
   </head>
   <body>
+
     <p class="disclaimer">
       This is not a real NPS website. It is an educational exercise. If you
       landed here by accident, to find the real website visit
       <a href="parkUrl">[park name]</a>
     </p>
+
     <div class="skip-links" aria-label="short-cut links" role="navigation">
       <ul>
+
         <li>
           <a
             href="#global-nav-toggle"
@@ -22,16 +25,19 @@
             >Skip to global NPS navigation</a
           >
         </li>
+
         <li>
           <a href="#local-nav" aria-label="Skip to this park navigation"
             >Skip to this park navigation</a
           >
         </li>
+
         <li>
           <a href="#main" aria-label="Skip to the main content"
             >Skip to the main content</a
           >
         </li>
+
         <li>
           <a
             href="#park-footer"
@@ -39,15 +45,20 @@
             >Skip to this park information section</a
           >
         </li>
+
       </ul>
     </div>
+
     <header>
       <section class="global-header">
+
         <a href="index.html" class="site-title"
           ><span class="logo" role="presentation"></span>
-          <span>National Park Service</span></a
-        >
+          <span>National Park Service</span>
+        </a>
+
         <div class="global-header__right">
+
           <a class="search-icon" href="#park-footer">
             <svg class="icon">
               <use
@@ -57,6 +68,7 @@
             </svg>
             <span class="visually-hidden">Search</span>
           </a>
+
           <button id="global-nav-toggle">
             <svg class="icon">
               <use
@@ -66,24 +78,90 @@
             </svg>
             <span class="visually-hidden">Open</span> Menu
           </button>
+
         </div>
       </section>
+
       <section id="park-header">
-        <a href="#">
-          <span>Info</span>
-          <svg class="icon" role="presentation" focusable="false">
-            <use
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-              xlink:href="/images/sprite.symbol.svg#info"
-            ></use>
-          </svg>
-        </a>
-        <svg class="icon" role="presentation" focusable="false">
-          <use
-            xmlns:xlink="http://www.w3.org/1999/xlink"
-            xlink:href="/images/sprite.symbol.svg#alert"
-          ></use>
-        </svg>
+
+        <div class="hero_banner">
+        <img src="" alt=""/>
+
+          <div class="hero_banner_content">
+            <a href="#" class="hero_banner_title">Yellowstone</a>
+            <p class="hero_banner_subtitle">
+              <span>National Park</span>
+              <span>ID, MT, WY</span>
+            </p> 
+          </div>
+          
+        </div>
+
+        <nav class="park_nav">
+          <ul>
+
+            <li>
+              <a href="#">
+                <span>Info</span>
+                <svg class="icon" role="presentation" focusable="false">
+                  <use
+                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                    xlink:href="/images/sprite.symbol.svg#info"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                <span>Alerts</span>
+              <svg class="icon" role="presentation" focusable="false">
+                <use
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  xlink:href="/images/sprite.symbol.svg#alert"
+                ></use>
+              </svg>
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                <span>Maps</span>
+              <svg class="icon" role="presentation" focusable="false"></svg>
+                <use
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  xlink:href="/images/sprite.symbol.svg#location"
+                ></use>
+              </svg>
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                <span>Calendar</span>
+              <svg class="icon" role="presentation" focusable="false"></svg>
+                <use
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  xlink:href="/images/sprite.symbol.svg#calendar"
+                ></use>
+              </svg>
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                <span>Fees</span>
+              <svg class="icon" role="presentation" focusable="false"></svg>
+                <use
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  xlink:href="/images/sprite.symbol.svg#fee-22"
+                ></use>
+              </svg>
+              </a>
+            </li>
+
+          </ul>
+        </nav>
       </section>
     </header>
     <main id="main"></main>
