--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,13 @@
     <script type="module" src="js/main.js"></script>
   </head>
   <body>
-
     <p class="disclaimer">
       This is not a real NPS website. It is an educational exercise. If you
       landed here by accident, to find the real website visit
       <a href="parkUrl">[park name]</a>
     </p>
-
     <div class="skip-links" aria-label="short-cut links" role="navigation">
       <ul>
-
         <li>
           <a
             href="#global-nav-toggle"
@@ -25,19 +22,16 @@
             >Skip to global NPS navigation</a
           >
         </li>
-
         <li>
           <a href="#local-nav" aria-label="Skip to this park navigation"
             >Skip to this park navigation</a
           >
         </li>
-
         <li>
           <a href="#main" aria-label="Skip to the main content"
             >Skip to the main content</a
           >
         </li>
-
         <li>
           <a
             href="#park-footer"
@@ -45,20 +39,18 @@
             >Skip to this park information section</a
           >
         </li>
-
       </ul>
     </div>
 
     <header>
       <section class="global-header">
-
+        <!-- National Park Service Title -->
         <a href="index.html" class="site-title"
           ><span class="logo" role="presentation"></span>
           <span>National Park Service</span>
         </a>
-
-        <div class="global-header__right">
-
+        <!-- Search button -->
+        <div class="global-header-right">
           <a class="search-icon" href="#park-footer">
             <svg class="icon">
               <use
@@ -68,7 +60,7 @@
             </svg>
             <span class="visually-hidden">Search</span>
           </a>
-
+          <!-- Menu Button -->
           <button id="global-nav-toggle">
             <svg class="icon">
               <use
@@ -76,9 +68,9 @@
                 xlink:href="/images/sprite.symbol.svg#menu"
               ></use>
             </svg>
-            <span class="visually-hidden">Open</span> Menu
+            <span class="visually-hidden">Open</span> 
+            <a id="menu-text">Menu</a>
           </button>
-
         </div>
       </section>
 
@@ -87,6 +79,7 @@
         <div class="hero_banner">
         <img src="" alt=""/>
 
+        <!-- Hero Banner Stuff -->
           <div class="hero_banner_content">
             <a href="#" class="hero_banner_title">Yellowstone</a>
             <p class="hero_banner_subtitle">
@@ -127,7 +120,7 @@
             <li>
               <a href="#">
                 <span>Maps</span>
-              <svg class="icon" role="presentation" focusable="false"></svg>
+              <svg class="icon" role="presentation" focusable="false">
                 <use
                   xmlns:xlink="http://www.w3.org/1999/xlink"
                   xlink:href="/images/sprite.symbol.svg#location"
@@ -139,7 +132,7 @@
             <li>
               <a href="#">
                 <span>Calendar</span>
-              <svg class="icon" role="presentation" focusable="false"></svg>
+              <svg class="icon" role="presentation" focusable="false">
                 <use
                   xmlns:xlink="http://www.w3.org/1999/xlink"
                   xlink:href="/images/sprite.symbol.svg#calendar"
@@ -151,7 +144,7 @@
             <li>
               <a href="#">
                 <span>Fees</span>
-              <svg class="icon" role="presentation" focusable="false"></svg>
+              <svg class="icon" role="presentation" focusable="false">
                 <use
                   xmlns:xlink="http://www.w3.org/1999/xlink"
                   xlink:href="/images/sprite.symbol.svg#fee-22"
