--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>[Park Name]</title>
+    <title></title>
     <link rel="stylesheet" href="css/style.css" />
     <script type="module" src="js/main.js"></script>
   </head>
@@ -11,7 +11,7 @@
     <p class="disclaimer">
       This is not a real NPS website. It is an educational exercise. If you
       landed here by accident, to find the real website visit
-      <a href="parkUrl">[park name]</a>
+      <a href="parkUrl"></a>
     </p>
     <div class="skip-links" aria-label="short-cut links" role="navigation">
       <ul>
@@ -47,7 +47,7 @@
         <!-- National Park Service Title -->
         <a href="index.html" class="site-title"
           ><span class="logo" role="presentation"></span>
-          <span>National Park Service</span>
+          <span class="national_park_service">National Park Service</span>
         </a>
         <!-- Search button -->
         <div class="global-header-right">
@@ -77,14 +77,14 @@
       <section id="park-header">
 
         <div class="hero_banner">
-        <img src="" alt=""/>
+          <img class="hero_banner_img" src="" alt="hero banner image"/>
 
         <!-- Hero Banner Stuff -->
           <div class="hero_banner_content">
-            <a href="#" class="hero_banner_title">Yellowstone</a>
+            <a href="" class="hero_banner_title"></a>
             <p class="hero_banner_subtitle">
-              <span>National Park</span>
-              <span>ID, MT, WY</span>
+              <span></span>
+              <span></span>
             </p> 
           </div>
           
