--- a/src/index.html
+++ b/src/index.html
@@ -157,7 +157,14 @@
         </nav>
       </section>
     </header>
-    <main id="main"></main>
+    <main id="main">
+      <section class="intro">
+
+      </section>
+      <section class="info">
+
+      </section>
+    </main>
     <footer id="park-footer"></footer>
   </body>
 </html>
