--- a/src/index.html
+++ b/src/index.html
@@ -162,9 +162,11 @@
 
       </section>
       <section class="info">
-        
+
       </section>
     </main>
-    <footer id="park-footer"></footer>
+    <footer id="park-footer">
+      
+    </footer>
   </body>
 </html>
