finished up the assignment

--- a/src/index.html
+++ b/src/index.html
@@ -166,7 +166,11 @@
       </section>
     </main>
     <footer id="park-footer">
-      
+      <section class="contact">
+
+      </section>
+      <img src="https://byui-cse.github.io/wdd231-course/images/topo_pattern.png"/>
+    </section>
     </footer>
   </body>
 </html>
