--- a/src/index.html
+++ b/src/index.html
@@ -61,18 +61,49 @@
             <span class="visually-hidden">Search</span>
           </a>
           <!-- Menu Button -->
-          <button id="global-nav-toggle">
+          <button id="global-nav-toggle"
+          class="global-nav__toggle"
+          aria-expanded="false"
+          aria-label="Open Menu">
+          <div class="global-nav__toggle--closed">
             <svg class="icon">
               <use
                 xmlns:xlink="http://www.w3.org/1999/xlink"
                 xlink:href="/images/sprite.symbol.svg#menu"
               ></use>
             </svg>
-            <span class="visually-hidden">Open</span> 
-            <a id="menu-text">Menu</a>
+            <span class="visually-hidden">Open</span> Menu
+          </div>
+          <div class="global-nav__toggle--open">
+            <svg class="icon">
+              <use
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                xlink:href="/images/sprite.symbol.svg#close"
+              ></use>
+            </svg>
+            Close
+          </div>  
           </button>
         </div>
       </section>
+      <nav class="global-nav">
+        <h2 class="global-nav__section-heading">Explore this Park</h2>
+        <ul class="global-nav__list">
+        <li>
+            <div class="global-nav__split-button">
+            <a href="#">Plan Your Visit</a>
+            <button class="global-nav__split-button__toggle">
+                <span class="visually-hidden"
+                >Toggle submenu for Plan Your Visit</span
+                >
+                <svg class="icon" role="presentation" focusable="false">
+                  <use xlink:href="/images/sprite.symbol.svg#arrow"></use>
+                </svg>
+            </button>
+            </div>
+        </li>
+        </ul>
+    </nav>
 
       <section id="park-header">
 
