Doing the nps 6 assignment

--- a/src/index.html
+++ b/src/index.html
@@ -134,7 +134,7 @@
 
         <li>
           <div class="global-nav__split-button">
-          <a href="#">Plan Your Visit</a>
+          <a href="#">Learn and Explore</a>
           <button class="global-nav__split-button__toggle">
               <span class="visually-hidden"
               >Toggle submenu for Plan Your Visit</span
@@ -157,7 +157,7 @@
 
       <li>
         <div class="global-nav__split-button">
-        <a href="#">Plan Your Visit</a>
+        <a href="#">Get Involved</a>
         <button class="global-nav__split-button__toggle">
             <span class="visually-hidden"
             >Toggle submenu for Plan Your Visit</span
