--- a/src/conditions.html
+++ b/src/conditions.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
     <link rel="stylesheet" href="css/style.css" />
-    <script type="module" src="js/conditions.js"></script>
+    <script type="module" src="js/conditions.js" defer></script>
   </head>
   <body>
     <p class="disclaimer">
@@ -61,18 +61,125 @@
             <span class="visually-hidden">Search</span>
           </a>
           <!-- Menu Button -->
-          <button id="global-nav-toggle">
+          <button id="global-nav-toggle"
+          class="global-nav__toggle"
+          aria-expanded="false"
+          aria-label="Open Menu">
+          <div class="global-nav__toggle--closed">
             <svg class="icon">
               <use
                 xmlns:xlink="http://www.w3.org/1999/xlink"
                 xlink:href="/images/sprite.symbol.svg#menu"
               ></use>
             </svg>
-            <span class="visually-hidden">Open</span> 
-            <a id="menu-text">Menu</a>
+            <span class="visually-hidden">Open</span> Menu
+          </div>
+          <div class="global-nav__toggle--open">
+            <svg class="icon">
+              <use
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                xlink:href="/images/sprite.symbol.svg#close"
+              ></use>
+            </svg>
+            Close
+          </div>  
           </button>
         </div>
       </section>
+      <nav class="global-nav">
+        <h2 class="global-nav__section-heading">Explore this Park</h2>
+        <ul class="global-nav__list">
+        <li>
+            <div class="global-nav__split-button">
+            <a href="#">Plan Your Visit</a>
+            <button class="global-nav__split-button__toggle">
+                <span class="visually-hidden"
+                >Toggle submenu for Plan Your Visit</span
+                >
+                <svg class="icon" role="presentation" focusable="false">
+                <use
+                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                    xlink:href="/images/sprite.symbol.svg#arrow"
+                ></use>
+                </svg>
+            </button>
+            </div>
+        </li>
+        </ul>
+        <h2 class="global-nav__section-heading">Explore the National Park Service</h2>
+        <ul class="global-nav__list">
+
+        <li>
+            <div class="global-nav__split-button">
+            <a href="#">Plan Your Visit</a>
+            <button class="global-nav__split-button__toggle">
+                <span class="visually-hidden"
+                >Toggle submenu for Plan Your Visit</span
+                >
+                <svg class="icon" role="presentation" focusable="false">
+                <use
+                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                    xlink:href="/images/sprite.symbol.svg#arrow"
+                ></use>
+                </svg>
+            </button>
+            </div>
+            <ul class="global-nav__submenu" aria-label="Plan Your Visit submenu">
+                <li><a href="#" >Find a Park</a></li>
+                <li><a href="#" >Events</a></li>
+                <li><a href="#" >Passes</a></li>
+                <li><a href="#" >Trip Ideas</a></li>
+            </ul>  
+        </li>
+
+        <li>
+          <div class="global-nav__split-button">
+          <a href="#">Learn and Explore</a>
+          <button class="global-nav__split-button__toggle">
+              <span class="visually-hidden"
+              >Toggle submenu for Plan Your Visit</span
+              >
+              <svg class="icon" role="presentation" focusable="false">
+              <use
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  xlink:href="/images/sprite.symbol.svg#arrow"
+              ></use>
+              </svg>
+          </button>
+          </div>
+          <ul class="global-nav__submenu" aria-label="Learn & Explore submenu">
+              <li><a href="#" >About Us</a></li>
+              <li><a href="#" >Discover History</a></li>
+              <li><a href="#" >Explore Nature</a></li>
+              <li><a href="#" >Kids</a></li>
+          </ul>  
+      </li>
+
+      <li>
+        <div class="global-nav__split-button">
+        <a href="#">Get Involved</a>
+        <button class="global-nav__split-button__toggle">
+            <span class="visually-hidden"
+            >Toggle submenu for Plan Your Visit</span
+            >
+            <svg class="icon" role="presentation" focusable="false">
+            <use
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                xlink:href="/images/sprite.symbol.svg#arrow"
+            ></use>
+            </svg>
+        </button>
+        </div>
+        <ul class="global-nav__submenu" aria-label="Get Involved submenu">
+            <li><a href="#" >Donate</a></li>
+            <li><a href="#" >Partner</a></li>
+            <li><a href="#" >Volunteer</a></li>
+            <li><a href="#" >Work for Us</a></li>
+        </ul>  
+      </li>
+
+      </ul>
+    </nav>
 
       <section id="park-header">
 
